<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_control</name>
  <version>0.0.1</version>
  <description>Autonomous control node that sends to drive command to vehicle actuators</description>
  <maintainer email="research@99plabs.com">99P Labs</maintainer>
  <license>MIT</license>

  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
