cmake_minimum_required(VERSION 3.5)
project(car_navigation)

find_package(ament_cmake REQUIRED)
find_package(nav2_common REQUIRED)

install(DIRECTORY behavior_tree DESTINATION share/${PROJECT_NAME})
install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})
install(DIRECTORY maps DESTINATION share/${PROJECT_NAME})
install(DIRECTORY params DESTINATION share/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
